# koto-score-creator

./: CMakeLists.txt  README.md
KotoNotation/: HelpBox.h  KotoNotation.cpp  KotoNotation.h  PDF.h  Synth.h
enc_temp_folder/5178ee0a397785b395a6f6e7de8a5aa/: README.md
